--- a/register.html
+++ b/register.html
@@ -329,7 +329,7 @@
                 </form>
                 
                 <div class="mt-8 text-center text-gray-400 fade-in delay-2">
-                    <p>Already registered? <a href="mailto:limscobeauty18@gmail.com" class="text-purple-400 hover:text-purple-300">Contact us</a> for support.</p>
+                    <p>Already registered? <a href="mailto:websprouthub@gmail.com" class="text-purple-400 hover:text-purple-300">Contact us</a> for support.</p>
                 </div>
             </div>
         </div>
