--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                     <div class="bg-slate-900 rounded-2xl p-8 border border-purple-500/20 hover:border-purple-500/40 transition-all">
                         <div class="text-4xl mb-4">📧</div>
                         <h3 class="text-xl font-bold mb-2">Email Us</h3>
-                        <a href="mailto:websprouthub@gmail.com" class="text-purple-400 hover:text-purple-300">limscobeauty18@gmail.com</a>
+                        <a href="mailto:websprouthub@gmail.com" class="text-purple-400 hover:text-purple-300">websprouthub@gmail.com</a>
                     </div>
                     
                     <div class="bg-slate-900 rounded-2xl p-8 border border-purple-500/20 hover:border-purple-500/40 transition-all">
