--- a/register.html
+++ b/register.html
@@ -430,7 +430,7 @@
                 `Message: ${message || 'N/A'}`
             );
             
-            const mailtoLink = `mailto:limscobeauty18@gmail.com?subject=${subject}&body=${body}`;
+            const mailtoLink = `mailto:websprouthub@gmail.com?subject=${subject}&body=${body}`;
             
             // Open email client
             window.location.href = mailtoLink;
